--- a/HTML,JS,TS_Basics/index.html
+++ b/HTML,JS,TS_Basics/index.html
@@ -6,9 +6,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learn JS</title>
 </head>
-<body>
-    <h1>JavaScript training</h1>
+<body style="background-color:#EE7B63;">
+    <h1 style="border-style:double; border-color:brown; text-align:center; background-color: aqua;">JavaScript training</h1>
     <script src="index.js">
     </script>
+    <br/>
+    <br/>
+    <div>
+        <p> Lorem 30
+        </p>
+    </div>
+    <div style="background-color: burlywood;">
+        <h2 style="background-color: chartreuse; text-align:center";>User Registration</h2>
+        <label>First Name</label>
+        <input style="margin-bottom: 5px; margin-left: 15px;" id="firstName" placeholder="Enter your First Name" type="text"/>
+        <br/>
+        <label>Last Name</label>
+        <input id="lastName" style="margin-bottom: 5px; margin-left: 15px;" placeholder="Enter your Last Name" type="text"/>
+        <br/>
+        <label for="email">Email</label>
+        <input id="email" style="margin-bottom: 5px; margin-left: 15px;" placeholder="Enter your Email Id" type="email"/>
+        <br>
+        <label>Enter you DOB</label>
+        <input id="dob" style="margin-bottom: 5px; margin-left: 15px;" placeholder="Enter your Date of Birth" type="date"/>
+        <br>
+        <label>Gender</label>
+        <br/>
+        <input  style="margin-left: 10px;" type="radio" name="gender" value="Male" id="gender">Male
+        <br/>
+        <input  style="margin-left: 10px;" type="radio"  name="gender" value="female" id="gender">Female
+        <br/>
+        <input  style="margin-left: 10px;" type="radio"  name="gender" value="Others" id="gender">Others
+        <br>
+        <label>Choose your fav Language</label>
+        <input type="checkbox" id="lang" value="Java">Java
+        <input type="checkbox" id="lang" value="JavaScript">JavaScript
+        <input type="checkbox" id="lang" value="Python">Python
+        <br/>
+        <button type="submit" onclick="ColorPicker()">Submit</button>
+        <a href="https://htmlcolorcodes.com/color-picker/">next page</a>
+    </div>
+    <div>
+        <!-- //Anchor tags -->
+        <!-- Ordered list-->
+        <ol style="border-style: groove; border-color: darkblue;">
+            <li>Rishabh</li>
+            <li>Kumar</li>
+            <li>Saran</li>
+            <li>Bihar</li>
+        </ol>
+        <!-- Unordered list-->
+        <ul  style="border-style: groove; border-color: darkblue;">
+            <li>Rishabh</li>
+            <li>Kumar</li>
+            <li>Saran</li>
+            <li>Bihar</li>
+        </ul>
+    </div>
 </body>
 </html>
