JSHTML Promises, forms

--- a/HTML,JS,TS_Basics/promise.html
+++ b/HTML,JS,TS_Basics/promise.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <h1>Learn Promises, Async & wait </h1>
+    <button type="submit" onclick="callFunc()" >Call Function</button>
 </body>
 </html>
