--- a/Code-Coverage-report/Book-Microservice/src_main_java/com.book.service/BookServiceImpl.java.html
+++ b/Code-Coverage-report/Book-Microservice/src_main_java/com.book.service/BookServiceImpl.java.html
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en"><head><meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/><link rel="stylesheet" href="../../../jacoco-resources/report.css" type="text/css"/><link rel="shortcut icon" href="../../../jacoco-resources/report.gif" type="image/gif"/><title>BookServiceImpl.java</title><link rel="stylesheet" href="../../../jacoco-resources/prettify.css" type="text/css"/><script type="text/javascript" src="../../../jacoco-resources/prettify.js"></script></head><body onload="window['PR_TAB_WIDTH']=4;prettyPrint()"><div class="breadcrumb" id="breadcrumb"><span class="info"><a href="../../../jacoco-sessions.html" class="el_session">Sessions</a></span><a href="../../../index.html" class="el_report">Book-Microservice (25-Dec-2022 6:54:04 PM)</a> &gt; <a href="../../index.html" class="el_group">Book-Microservice</a> &gt; <a href="../index.html" class="el_bundle">src/main/java</a> &gt; <a href="index.source.html" class="el_package">com.book.service</a> &gt; <span class="el_source">BookServiceImpl.java</span></div><h1>BookServiceImpl.java</h1><pre class="source lang-java linenums">package com.book.service;
+<?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en"><head><meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/><link rel="stylesheet" href="../../../jacoco-resources/report.css" type="text/css"/><link rel="shortcut icon" href="../../../jacoco-resources/report.gif" type="image/gif"/><title>BookServiceImpl.java</title><link rel="stylesheet" href="../../../jacoco-resources/prettify.css" type="text/css"/><script type="text/javascript" src="../../../jacoco-resources/prettify.js"></script></head><body onload="window['PR_TAB_WIDTH']=4;prettyPrint()"><div class="breadcrumb" id="breadcrumb"><span class="info"><a href="../../../jacoco-sessions.html" class="el_session">Sessions</a></span><a href="../../../index.html" class="el_report">Book-Microservice (27-Dec-2022 1:29:17 PM)</a> &gt; <a href="../../index.html" class="el_group">Book-Microservice</a> &gt; <a href="../index.html" class="el_bundle">src/main/java</a> &gt; <a href="index.source.html" class="el_package">com.book.service</a> &gt; <span class="el_source">BookServiceImpl.java</span></div><h1>BookServiceImpl.java</h1><pre class="source lang-java linenums">package com.book.service;
 
 import java.util.List;
 import java.util.Optional;
@@ -26,22 +26,22 @@ import com.book.repository.IBookRepository;
 	
 	@Override
 	public String createBook(BookInfodto book, int id) {
-<span class="fc" id="L29">		Book existingBook = new Book();</span>
-<span class="fc" id="L30">		Author author = new Author();</span>
-<span class="fc" id="L31">		author.setAuthorId(id);</span>
-<span class="fc" id="L32">		System.out.println(author.getAuthorId());</span>
+<span class="nc" id="L29">		Book existingBook = new Book();</span>
+<span class="nc" id="L30">		Author author = new Author();</span>
+<span class="nc" id="L31">		author.setAuthorId(id);</span>
+<span class="nc" id="L32">		System.out.println(author.getAuthorId());</span>
 		try {
-<span class="fc" id="L34">			existingBook.setBookTitle(book.getBookTitle());</span>
-<span class="fc" id="L35">			existingBook.setBookActive(book.isBookActive());</span>
-<span class="fc" id="L36">			existingBook.setBookCategory(book.getBookCategory());</span>
-<span class="fc" id="L37">			existingBook.setBookContent(book.getBookContent());</span>
-<span class="fc" id="L38">			existingBook.setBookDescription(book.getBookDescription());</span>
-<span class="fc" id="L39">			existingBook.setBookLogo(book.getBookLogo());</span>
-<span class="fc" id="L40">			existingBook.setBookPrice(book.getBookPrice());</span>
-<span class="fc" id="L41">			existingBook.setBookPublishedDate(book.getBookPublishedDate());</span>
-<span class="fc" id="L42">			existingBook.setBookPublisher(book.getBookPublisher());</span>
-<span class="fc" id="L43">			System.out.println(existingBook.getBookTitle());</span>
-<span class="fc" id="L44">			existingBook.setBookAuthor(author);</span>
+<span class="nc" id="L34">			existingBook.setBookTitle(book.getBookTitle());</span>
+<span class="nc" id="L35">			existingBook.setBookActive(book.isBookActive());</span>
+<span class="nc" id="L36">			existingBook.setBookCategory(book.getBookCategory());</span>
+<span class="nc" id="L37">			existingBook.setBookContent(book.getBookContent());</span>
+<span class="nc" id="L38">			existingBook.setBookDescription(book.getBookDescription());</span>
+<span class="nc" id="L39">			existingBook.setBookLogo(book.getBookLogo());</span>
+<span class="nc" id="L40">			existingBook.setBookPrice(book.getBookPrice());</span>
+<span class="nc" id="L41">			existingBook.setBookPublishedDate(book.getBookPublishedDate());</span>
+<span class="nc" id="L42">			existingBook.setBookPublisher(book.getBookPublisher());</span>
+<span class="nc" id="L43">			System.out.println(existingBook.getBookTitle());</span>
+<span class="nc" id="L44">			existingBook.setBookAuthor(author);</span>
 <span class="nc" id="L45">		    existingBook= bookRepository.save(existingBook);</span>
 <span class="nc" id="L46">		}</span>
 <span class="nc" id="L47">		catch(Exception ex) {</span>
@@ -63,9 +63,9 @@ import com.book.repository.IBookRepository;
 
 	@Override
 	public String updateBookContent(BookInfodto book, Integer id) {
-<span class="fc" id="L66">		String status=&quot;Not able to update book, Kindly check logs!&quot;;</span>
-<span class="pc" id="L67">		Book existingBook = bookRepository.findById(id).orElseThrow(</span>
-<span class="fc" id="L68">				()-&gt; new com.book.exceptions.ResourceNotFoundExceptionHandler(&quot;Book&quot;,&quot;id&quot;,id));</span>
+<span class="nc" id="L66">		String status=&quot;Not able to update book, Kindly check logs!&quot;;</span>
+<span class="nc" id="L67">		Book existingBook = bookRepository.findById(id).orElseThrow(</span>
+<span class="nc" id="L68">				()-&gt; new com.book.exceptions.ResourceNotFoundExceptionHandler(&quot;Book&quot;,&quot;id&quot;,id));</span>
 <span class="nc bnc" id="L69" title="All 2 branches missed.">		if(existingBook!=null) {</span>
 <span class="nc" id="L70">			existingBook.setBookTitle(book.getBookTitle());</span>
 <span class="nc" id="L71">			existingBook.setBookActive(book.isBookActive());</span>
@@ -86,8 +86,8 @@ import com.book.repository.IBookRepository;
 
 	@Override
 	public Book updateBookStatus(Book book, Integer id) {
-<span class="pc" id="L89">		Book existingBook = bookRepository.findById(id).orElseThrow(</span>
-<span class="fc" id="L90">				()-&gt; new com.book.exceptions.ResourceNotFoundExceptionHandler(&quot;Book&quot;,&quot;id&quot;,id));</span>
+<span class="nc" id="L89">		Book existingBook = bookRepository.findById(id).orElseThrow(</span>
+<span class="nc" id="L90">				()-&gt; new com.book.exceptions.ResourceNotFoundExceptionHandler(&quot;Book&quot;,&quot;id&quot;,id));</span>
 <span class="nc" id="L91">		existingBook.setBookActive(book.isBookActive());</span>
 <span class="nc" id="L92">		bookRepository.save(existingBook);</span>
 <span class="nc" id="L93">		return existingBook;</span>
@@ -129,11 +129,17 @@ import com.book.repository.IBookRepository;
 
 	@Override
 	public List&lt;Book&gt; listBookByPublisher(String bookPublisher) {
-<span class="nc" id="L132">		List&lt;Book&gt; book = bookRepository.findByBookPublisher(bookPublisher);</span>
-<span class="nc" id="L133">		return book;</span>
+<span class="fc" id="L132">		List&lt;Book&gt; book = bookRepository.findByBookPublisher(bookPublisher);</span>
+<span class="fc" id="L133">		return book;</span>
+	}
+
+	@Override
+	public List&lt;Book&gt; listBookByAuthor(Author author) {
+<span class="fc" id="L138">		List&lt;Book&gt; book = bookRepository.findByBookAuthor(author);</span>
+<span class="fc" id="L139">		return book;</span>
 	}
 	
 	
 
 }
-</pre><div class="footer"><span class="right">Created with <a href="http://www.jacoco.org/jacoco">JaCoCo</a> 0.8.8.202204050719</span>Book-Microservice (25-Dec-2022 6:54:04 PM)</div></body></html>
+</pre><div class="footer"><span class="right">Created with <a href="http://www.jacoco.org/jacoco">JaCoCo</a> 0.8.8.202204050719</span>Book-Microservice (27-Dec-2022 1:29:17 PM)</div></body></html>
